@@ -9,6 +9,8 @@
   - change new_dcomplex_array definition
   
       sub new_dcomplex_array : SPVM::Complex_d2[] ($re_values : double[], $im_values : double[]);
+  
+  - fix do string bugs. use open and eval string to load config file.
 
 0.0382 2018-10-29
   - remove no needed runtime type check.
